2009-12-14  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/main.c (main):
	* capplet/nwam_conn_conf_ip_panel.c (populate_panel), (apply),
	(show_changed_cb):
	* capplet/nwam_env_svc.c (nwam_env_svc_init), (svc_toggle_cb):
	* capplet/nwam_net_conf_panel.c (update_widgets),
	(edit_profile_name_combo_changed):
	* capplet/nwam_wireless_chooser.c (join_wireless):
	* common/libnwamui.c (user_has_autoconf_auth):
	* common/libnwamui.h:
	* common/nwamui_daemon.c (nwamui_daemon_class_init),
	(nwamui_daemon_init), (nwamui_daemon_set_property),
	(nwamui_daemon_ncp_remove), (nwamui_daemon_commit_changed_objects),
	(nwamd_event_handler), (nwam_ncp_walker_cb):
	* common/nwamui_enm.c (nwamui_enm_class_init), (nwamui_enm_init),
	(nwamui_enm_can_rename), (nwamui_enm_set_name),
	(nwamui_enm_get_name), (nwamui_enm_set_active),
	(nwamui_enm_get_active), (nwamui_enm_set_enabled),
	(nwamui_enm_get_enabled), (nwamui_enm_set_activation_mode),
	(nwamui_enm_get_activation_mode),
	(nwamui_enm_get_selection_conditions),
	(nwamui_enm_set_selection_conditions), (nwamui_enm_reload),
	(nwamui_enm_destroy), (nwamui_enm_commit),
	(nwamui_enm_get_nwam_state):
	* common/nwamui_env.c (nwamui_env_class_init), (nwamui_env_init),
	(nwamui_env_update_with_handle), (nwamui_env_can_rename),
	(nwamui_env_set_name), (nwamui_env_get_name),
	(nwamui_env_set_enabled), (nwamui_env_get_enabled),
	(nwamui_env_get_active), (nwamui_env_set_active),
	(nwamui_env_set_activation_mode), (nwamui_env_get_activation_mode),
	(nwamui_env_set_conditions), (nwamui_env_get_conditions),
	(nwamui_env_reload), (nwamui_env_destroy), (nwamui_env_commit),
	(nwamui_env_get_nwam_state):
	* common/nwamui_env.h:
	* common/nwamui_ncp.c (nwamui_ncp_class_init), (nwamui_ncp_init),
	(nwamui_ncp_set_property), (nwamui_ncp_get_property),
	(nwamui_ncp_get_nwam_state), (nwamui_ncp_reload),
	(nwamui_ncp_set_name), (nwamui_ncp_get_name),
	(nwamui_ncp_get_active), (nwamui_ncp_set_active),
	(nwamui_ncp_is_modifiable), (nwamui_ncp_get_prio_group),