@@ -1,3 +1,12 @@
+2009-12-16  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* capplet/nwam_wireless_chooser.c (nwam_wireless_chooser_init),
+	(dialog_run), (apply), (presistant_cb), (add_any_new_wifi_to_fav):
+	* capplet/nwam_wireless_dialog.c (nwam_wireless_dialog_init),
+	(apply), (dialog_run), (presistant_cb):
+	* common/nwamui_prof.c (gconf_notify_cb):
+	Fixed 12917 [RC6] enabled add to favorites is not consistent
+
 2009-12-14  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* capplet/main.c (main):
